--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.52.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "dotenv": "^16.0.3",
     "firebase": "^9.19.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
@@ -23,6 +26,7 @@
     "redux-persist": "^6.0.0",
     "reselect": "^4.1.7",
     "sass": "^1.60.0",
+    "stripe": "^12.4.0",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
   },
